# netology_math

./: HW-1.ipynb  HW-2.ipynb  HW-3.ipynb  HW-4.ipynb  HW_X.ipynb  README.md  pyproject.toml
